<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailActivity">

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/product_name"
                android:text="@string/hint_store_name"
                style="@style/CategoryStyle"/>
            <TextView
                android:id="@+id/product_name_val"
                style="@style/product_detail_style"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/product_price"
                android:text="@string/hint_store_price"
                style="@style/CategoryStyle"/>
            <TextView
                android:id="@+id/product_price_val"
                style="@style/product_detail_style"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/product_quantity"
                android:text="@string/hint_store_quantity"
                style="@style/CategoryStyle"/>
            <Button
                android:id="@+id/minus"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/minus"/>
            <TextView
                android:id="@+id/product_quantity_val"
                style="@style/product_detail_style"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/plus"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/plus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/product_sup_name"
                android:text="@string/hint_store_supplier_name"
                style="@style/CategoryStyle"/>
            <TextView
                android:id="@+id/product_sup_name_val"
                style="@style/product_detail_style"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/product_sup_phone"
                android:text="@string/hint_store_supplier_phone_number"
                style="@style/CategoryStyle"/>
            <TextView
                android:id="@+id/product_sup_phone_val"
                style="@style/product_detail_style"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_below="@id/details"
        android:id="@+id/delete"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:text="@string/delete"/>
    <Button
        android:layout_below="@id/details"
        android:id="@+id/call_sup"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/call_sup"
        android:layout_marginRight="@dimen/activity_margin"/>
</RelativeLayout>