<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for a single list item in the list of pets -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"  />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    style="@style/textOne"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/price"/>

                <TextView
                    android:id="@+id/price"
                    style="@style/textOne"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    style="@style/textOne"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/quantity"/>

                <TextView
                    android:id="@+id/quantity"
                    style="@style/textOne"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/sale"
                android:text="@string/sale"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:focusable="false"/>
            <Button
                android:id="@+id/detail"
                android:text="@string/detail"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:focusable="false"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>